# libcamera-1

./: .gitignore  meson_options.txt
.github/workflows/: ccpp.yml
include/libcamera/: meson.build  pointers.h
src/android/: camera3_hal.cpp  camera_device.cpp  camera_metadata.cpp  camera_metadata.h  meson.build  vendor_tag.cc  vendor_tag.h  vendor_tag_manager.cc
src/android/jpeg/: encoder_libjpeg.cpp  encoder_libjpeg.h  exif.cpp  exif.h
src/cam/: capture.cpp  capture.h  drm.cpp  drm.h  file_sink_compressor.cpp  file_sink_compressor.h  kms_sink.cpp  kms_sink.h  main.cpp  main.h  meson.build
src/libcamera/: buffer.cpp  v4l2_videodevice.cpp
src/libcamera/include/: merge_conflicts.h  v4l2_videodevice.h
src/libcamera/pipeline/vivid/: vivid.cpp
